aligner les modals au centre et fixer le bugs des tableux

--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -38,6 +38,9 @@
 }
 
 .modal-inner-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
   z-index: 999;
 }
@@ -52,7 +55,7 @@
 @media (max-width: 1366px) {
   .modal-inner-container {
     width: auto;
-    height: 600px;
+    height: 625px;
     overflow-y: auto;
     overflow-x: hidden;
   }
@@ -63,9 +66,9 @@
   width: 28rem;
   max-width: 51rem;
   margin: 0.5rem;
-  border-radius: 6px;
+  /*border-radius: 6px;*/
 
-  /* border-radius: 0.4rem; */
+  border-radius: 0.6rem;
 
   /* border-radius: 1.5em; */
 
@@ -74,7 +77,7 @@
 
 .modal-card-comments {
   background-color: #fff;
-  /* border-radius: 18px; */
+  border-radius: 0.6rem;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .15);
   display: flex;
   flex-direction: column;
@@ -91,8 +94,9 @@
   height: auto;
   width: auto;
   max-width: 50rem;
+  border-radius: 0.4rem;
   /* margin: 0.5rem;
-  /* border-radius: 0.4rem; */
+  
 
   /* border-radius: 6px; */
   background-color: #fff;
